--- a/package.json
+++ b/package.json
@@ -1,23 +1,23 @@
 {
   "name": "@pickjunk/min",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "A Tiny React Framework",
   "main": "index.js",
   "scripts": {
     "type-check": "tsc --noEmit",
     "type-check:watch": "npm run type-check -- --watch",
-    "build": "npm run build:types && npm run build:js",
+    "build": "npm run clean && npm run build:types && npm run build:js",
     "build:types": "tsc --emitDeclarationOnly --declarationDir .",
     "build:js": "babel src --out-dir lib --extensions \".ts,.tsx,.js\" --source-maps inline",
     "debug-analyze": "npm run build:js && node -r @babel/register ./test/webpack.js",
     "debug": "npm run build:js && node --inspect-brk -r @babel/register ./test/webpack.js",
     "test": "npm run build:js && jest",
-    "clean": "rimraf ./*.d.ts lib dist",
+    "clean": "rimraf ./*.d.ts lib dist bootstrap.js document.ejs config/",
     "prepublishOnly": "npm run build",
     "postpublish": "npm run clean"
   },
   "bin": {
-    "min": "./src/cli.js"
+    "min": "./bin/cli.js"
   },
   "repository": {
     "type": "git",
@@ -44,8 +44,8 @@
     "babel-jest": "^24.5.0",
     "jest": "^24.5.0",
     "memory-fs": "^0.4.1",
-    "rimraf": "^2.6.3",
-    "typescript": "^3.3.4000"
+    "puppeteer": "^1.14.0",
+    "rimraf": "^2.6.3"
   },
   "dependencies": {
     "@babel/core": "^7.4.0",
@@ -57,15 +57,20 @@
     "@babel/preset-typescript": "^7.3.3",
     "@babel/runtime-corejs2": "^7.4.2",
     "babel-loader": "^8.0.5",
+    "colors": "^1.3.3",
     "commander": "^2.19.0",
-    "js-yaml": "^3.13.0",
+    "html-webpack-plugin": "^3.2.0",
+    "koa": "^2.7.0",
+    "koa-static": "^5.0.0",
     "lodash": "^4.17.11",
     "node-eval": "^2.0.0",
     "portfinder": "^1.0.20",
+    "prop-types": "^15.7.2",
     "qs": "^6.7.0",
     "react": "^16.8.5",
     "react-dom": "^16.8.5",
     "rxjs": "^6.4.0",
+    "typescript": "^3.3.4000",
     "webpack": "^4.29.6",
     "webpack-bundle-analyzer": "^3.1.0",
     "webpack-cli": "^3.3.0",
