--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@pickjunk/min",
-  "version": "1.1.0",
+  "version": "1.2.0-alpha.1",
   "description": "A Tiny React Framework",
   "main": "index.js",
   "scripts": {
@@ -55,17 +55,15 @@
     "@babel/preset-env": "^7.4.2",
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.3.3",
-    "@babel/runtime-corejs2": "^7.4.2",
     "babel-loader": "^8.0.5",
     "colors": "^1.3.3",
     "commander": "^2.19.0",
-    "html-webpack-plugin": "^3.2.0",
-    "koa": "^2.7.0",
-    "koa-static": "^5.0.0",
+    "express": "^4.16.4",
+    "fs-extra": "^7.0.1",
     "lodash": "^4.17.11",
     "node-eval": "^2.0.0",
+    "open": "^6.1.0",
     "portfinder": "^1.0.20",
-    "prop-types": "^15.7.2",
     "qs": "^6.7.0",
     "react": "^16.8.5",
     "react-dom": "^16.8.5",
@@ -74,7 +72,7 @@
     "webpack": "^4.29.6",
     "webpack-bundle-analyzer": "^3.1.0",
     "webpack-cli": "^3.3.0",
-    "webpack-dev-server": "^3.2.1",
+    "webpack-dev-middleware": "^3.6.2",
     "webpack-merge": "^4.2.1",
     "webpackbar": "^3.1.5"
   },
