--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@pickjunk/min",
-  "version": "1.2.0-alpha.2",
+  "version": "1.2.0-alpha.3",
   "description": "A Tiny React Framework",
   "main": "index.js",
   "scripts": {
@@ -36,45 +36,46 @@
   },
   "homepage": "https://github.com/pickjunk/min#readme",
   "devDependencies": {
-    "@babel/cli": "^7.2.3",
-    "@babel/register": "^7.4.0",
-    "@types/lodash": "^4.14.123",
-    "@types/qs": "^6.5.2",
-    "@types/react": "^16.8.8",
-    "babel-jest": "^24.5.0",
-    "jest": "^24.5.0",
-    "memory-fs": "^0.4.1",
-    "puppeteer": "^1.14.0",
-    "rimraf": "^2.6.3"
+    "@babel/cli": "7.2.3",
+    "@babel/register": "7.4.0",
+    "@types/lodash": "4.14.123",
+    "@types/qs": "6.5.2",
+    "@types/react": "16.8.8",
+    "babel-jest": "24.5.0",
+    "jest": "24.5.0",
+    "memory-fs": "0.4.1",
+    "puppeteer": "1.14.0",
+    "rimraf": "2.6.3"
   },
   "dependencies": {
-    "@babel/core": "^7.4.0",
-    "@babel/plugin-proposal-class-properties": "^7.4.0",
-    "@babel/plugin-proposal-object-rest-spread": "^7.4.0",
-    "@babel/plugin-transform-runtime": "^7.4.0",
-    "@babel/preset-env": "^7.4.2",
-    "@babel/preset-react": "^7.0.0",
-    "@babel/preset-typescript": "^7.3.3",
-    "babel-loader": "^8.0.5",
-    "colors": "^1.3.3",
-    "commander": "^2.19.0",
-    "express": "^4.16.4",
-    "fs-extra": "^7.0.1",
-    "lodash": "^4.17.11",
-    "node-eval": "^2.0.0",
-    "open": "^6.1.0",
-    "portfinder": "^1.0.20",
-    "qs": "^6.7.0",
-    "react": "^16.8.5",
-    "react-dom": "^16.8.5",
-    "rxjs": "^6.4.0",
-    "typescript": "^3.3.4000",
-    "webpack": "^4.29.6",
-    "webpack-bundle-analyzer": "^3.1.0",
-    "webpack-cli": "^3.3.0",
-    "webpack-dev-middleware": "^3.6.2",
-    "webpack-merge": "^4.2.1",
-    "webpackbar": "^3.1.5"
+    "@babel/core": "7.4.0",
+    "@babel/plugin-proposal-class-properties": "7.4.0",
+    "@babel/plugin-proposal-object-rest-spread": "7.4.0",
+    "@babel/plugin-transform-runtime": "7.4.0",
+    "@babel/preset-env": "7.4.2",
+    "@babel/preset-react": "7.0.0",
+    "@babel/preset-typescript": "7.3.3",
+    "@babel/runtime": "7.4.3",
+    "babel-loader": "8.0.5",
+    "colors": "1.3.3",
+    "commander": "2.19.0",
+    "express": "4.16.4",
+    "fs-extra": "7.0.1",
+    "lodash": "4.17.11",
+    "node-eval": "2.0.0",
+    "open": "6.1.0",
+    "portfinder": "1.0.20",
+    "qs": "6.7.0",
+    "react": "16.8.5",
+    "react-dom": "16.8.5",
+    "rxjs": "6.4.0",
+    "typescript": "3.3.4000",
+    "webpack": "4.29.6",
+    "webpack-bundle-analyzer": "3.1.0",
+    "webpack-cli": "3.3.0",
+    "webpack-dev-middleware": "3.6.2",
+    "webpack-merge": "4.2.1",
+    "webpackbar": "3.1.5"
   },
   "engines": {
     "node": ">=10.0.0",
