--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@pickjunk/min",
-  "version": "1.2.0-alpha.7",
+  "version": "1.2.0-alpha.8",
   "description": "A Tiny React Framework",
   "main": "index.js",
   "scripts": {
@@ -56,9 +56,13 @@
     "@babel/preset-react": "7.0.0",
     "@babel/preset-typescript": "7.3.3",
     "@babel/runtime": "7.4.3",
+    "@hot-loader/react-dom": "16.8.5",
     "babel-loader": "8.0.5",
     "colors": "1.3.3",
     "commander": "2.19.0",
+    "escodegen": "^1.11.1",
+    "esprima": "4.0.1",
+    "estraverse": "4.2.0",
     "express": "4.16.4",
     "fs-extra": "7.0.1",
     "lodash": "4.17.11",
@@ -68,12 +72,14 @@
     "qs": "6.7.0",
     "react": "16.8.5",
     "react-dom": "16.8.5",
+    "react-hot-loader": "4.8.4",
     "rxjs": "6.4.0",
     "typescript": "3.3.4000",
     "webpack": "4.29.6",
     "webpack-bundle-analyzer": "3.1.0",
     "webpack-cli": "3.3.0",
     "webpack-dev-middleware": "3.6.2",
+    "webpack-hot-middleware": "2.24.3",
     "webpack-merge": "4.2.1",
     "webpackbar": "3.1.5"
   },
