--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@pickjunk/min",
-  "version": "1.2.0-alpha.8",
+  "version": "1.3.0",
   "description": "A Tiny React Framework",
   "main": "index.js",
   "scripts": {
@@ -60,7 +60,7 @@
     "babel-loader": "8.0.5",
     "colors": "1.3.3",
     "commander": "2.19.0",
-    "escodegen": "^1.11.1",
+    "escodegen": "1.11.1",
     "esprima": "4.0.1",
     "estraverse": "4.2.0",
     "express": "4.16.4",
