--- a/package.json
+++ b/package.json
@@ -65,11 +65,12 @@
     "estraverse": "4.2.0",
     "express": "4.16.4",
     "fs-extra": "7.0.1",
-    "http-proxy-middleware": "^0.19.1",
+    "http-proxy-middleware": "0.19.1",
     "lodash": "4.17.11",
     "node-eval": "2.0.0",
     "open": "6.1.0",
     "portfinder": "1.0.20",
+    "prettyjson": "1.2.1",
     "qs": "6.7.0",
     "react": "16.8.5",
     "react-dom": "16.8.5",
