--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "express": "4.16.4",
     "fs-extra": "7.0.1",
     "http-proxy-middleware": "0.19.1",
+    "js-object-pretty-print": "^0.3.0",
     "lodash": "4.17.11",
     "node-eval": "2.0.0",
     "open": "6.1.0",
@@ -78,7 +79,7 @@
     "rxjs": "6.4.0",
     "typescript": "3.3.4000",
     "webpack": "4.29.6",
-    "webpack-bundle-analyzer": "3.1.0",
+    "webpack-bundle-analyzer": "^3.3.2",
     "webpack-cli": "3.3.0",
     "webpack-dev-middleware": "3.6.2",
     "webpack-hot-middleware": "2.24.3",
