--- a/package.json
+++ b/package.json
@@ -60,13 +60,14 @@
     "babel-loader": "8.0.5",
     "colors": "1.3.3",
     "commander": "2.19.0",
+    "compression-webpack-plugin": "3.0.0",
     "escodegen": "1.11.1",
     "esprima": "4.0.1",
     "estraverse": "4.2.0",
     "express": "4.16.4",
     "fs-extra": "7.0.1",
     "http-proxy-middleware": "0.19.1",
-    "js-object-pretty-print": "^0.3.0",
+    "js-object-pretty-print": "0.3.0",
     "lodash": "4.17.11",
     "node-eval": "2.0.0",
     "open": "6.1.0",
@@ -79,7 +80,7 @@
     "rxjs": "6.4.0",
     "typescript": "3.3.4000",
     "webpack": "4.29.6",
-    "webpack-bundle-analyzer": "^3.3.2",
+    "webpack-bundle-analyzer": "3.3.2",
     "webpack-cli": "3.3.0",
     "webpack-dev-middleware": "3.6.2",
     "webpack-hot-middleware": "2.24.3",
