--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "@pickjunk/min",
   "version": "1.3.0",
   "description": "A Tiny React Framework",
-  "main": "index.js",
+  "main": "lib/index.js",
   "scripts": {
     "type-check": "tsc --noEmit",
     "type-check:watch": "npm run type-check -- --watch",
     "build": "npm run clean && npm run build:types && npm run build:js",
-    "build:types": "tsc --emitDeclarationOnly --declarationDir .",
+    "build:types": "tsc --emitDeclarationOnly --declarationDir . && rimraf log",
     "build:js": "babel src --out-dir lib --extensions \".ts,.tsx,.js\" --source-maps inline",
     "debug-analyze": "npm run build:js && node -r @babel/register ./test/webpack.js",
     "debug": "npm run build:js && node --inspect-brk -r @babel/register ./test/webpack.js",
@@ -39,8 +39,10 @@
     "@babel/cli": "7.2.3",
     "@babel/register": "7.4.0",
     "@types/lodash": "4.14.123",
+    "@types/pino": "5.8.12",
     "@types/qs": "6.5.2",
     "@types/react": "16.8.8",
+    "@types/react-dom": "16.9.2",
     "babel-jest": "24.5.0",
     "jest": "24.5.0",
     "memory-fs": "0.4.1",
@@ -79,6 +81,8 @@
     "react": "16.8.5",
     "react-dom": "16.8.5",
     "react-hot-loader": "4.8.4",
+    "react-traverse": "1.0.0",
+    "register-module": "0.0.2",
     "rxjs": "6.4.0",
     "typescript": "3.3.4000",
     "webpack": "4.35.0",
