--- a/example/package.json
+++ b/example/package.json
@@ -18,6 +18,11 @@
   "license": "ISC",
   "dependencies": {
     "@pickjunk/min": "github:pickjunk/min#master",
+    "css-loader": "^5.0.2",
+    "file-loader": "^6.2.0",
+    "isomorphic-style-loader": "^5.1.0",
+    "less": "^4.1.1",
+    "less-loader": "^8.0.0",
     "rimraf": "^3.0.2"
   }
 }
