--- a/example/package.json
+++ b/example/package.json
@@ -20,9 +20,10 @@
     "@pickjunk/min": "github:pickjunk/min#master",
     "css-loader": "^5.0.2",
     "file-loader": "^6.2.0",
-    "isomorphic-style-loader": "^5.1.0",
     "less": "^4.1.1",
     "less-loader": "^8.0.0",
-    "rimraf": "^3.0.2"
+    "react-no-ssr": "^1.1.0",
+    "rimraf": "^3.0.2",
+    "style-loader": "^2.0.0"
   }
 }
