内置promise.stop，用于中断路由

--- a/example/.babelrc
+++ b/example/.babelrc
@@ -8,5 +8,11 @@
     "@babel/plugin-transform-runtime",
     "@babel/proposal-class-properties",
     "@babel/plugin-proposal-object-rest-spread",
+    [
+      "import", {
+        "libraryName": "antd",
+        "style": true
+      }
+    ]
   ]
 }
