--- a/example/package.json
+++ b/example/package.json
@@ -16,10 +16,15 @@
   ],
   "author": "",
   "license": "ISC",
+  "peerDependencies": {
+    "lodash": "^4.17.20",
+    "rxjs": "^6.6.3"
+  },
   "dependencies": {
     "@ant-design/icons": "^4.5.0",
     "@pickjunk/min": "github:pickjunk/min#master",
     "antd": "^4.12.3",
+    "babel-plugin-import": "^1.13.3",
     "clsx": "^1.1.1",
     "css-loader": "^5.0.2",
     "file-loader": "^6.2.0",
