把example独立出来

--- a/package.json
+++ b/package.json
@@ -58,7 +58,9 @@
     "@babel/preset-typescript": "^7.12.16",
     "@babel/runtime": "^7.12.13",
     "@hot-loader/react-dom": "^16.14.0",
+    "axios": "^0.21.1",
     "babel-loader": "^8.2.2",
+    "cli-progress": "^3.9.0",
     "colors": "^1.4.0",
     "commander": "^2.20.3",
     "compression-webpack-plugin": "^7.1.2",
@@ -84,6 +86,7 @@
     "register-module": "^0.0.2",
     "rxjs": "^6.6.3",
     "typescript": "^4.1.5",
+    "unzipper": "^0.10.11",
     "webpack": "^5.21.2",
     "webpack-cli": "^4.5.0",
     "webpack-dev-middleware": "^4.1.0",
