--- a/package.json
+++ b/package.json
@@ -35,6 +35,13 @@
   },
   "homepage": "https://github.com/pickjunk/min#readme",
   "devDependencies": {
+    "babel-jest": "^26.6.3",
+    "jest": "^26.6.3",
+    "puppeteer": "^1.20.0"
+  },
+  "dependencies": {
+    "memory-fs": "^0.4.1",
+    "rimraf": "^2.7.1",
     "@babel/cli": "^7.12.16",
     "@babel/register": "^7.12.13",
     "@types/lodash": "^4.14.168",
@@ -42,13 +49,6 @@
     "@types/qs": "^6.9.5",
     "@types/react": "^16.14.4",
     "@types/react-dom": "^16.9.11",
-    "babel-jest": "^26.6.3",
-    "jest": "^26.6.3",
-    "memory-fs": "^0.4.1",
-    "puppeteer": "^1.20.0",
-    "rimraf": "^2.7.1"
-  },
-  "dependencies": {
     "@babel/core": "^7.12.16",
     "@babel/plugin-proposal-class-properties": "^7.12.13",
     "@babel/plugin-proposal-object-rest-spread": "^7.12.13",
