--- a/package.json
+++ b/package.json
@@ -40,15 +40,7 @@
     "puppeteer": "^1.20.0"
   },
   "dependencies": {
-    "memory-fs": "^0.4.1",
-    "rimraf": "^2.7.1",
     "@babel/cli": "^7.12.16",
-    "@babel/register": "^7.12.13",
-    "@types/lodash": "^4.14.168",
-    "@types/pino": "^6.3.5",
-    "@types/qs": "^6.9.5",
-    "@types/react": "^16.14.4",
-    "@types/react-dom": "^16.9.11",
     "@babel/core": "^7.12.16",
     "@babel/plugin-proposal-class-properties": "^7.12.13",
     "@babel/plugin-proposal-object-rest-spread": "^7.12.13",
@@ -56,8 +48,14 @@
     "@babel/preset-env": "^7.12.16",
     "@babel/preset-react": "^7.12.13",
     "@babel/preset-typescript": "^7.12.16",
+    "@babel/register": "^7.12.13",
     "@babel/runtime": "^7.12.13",
     "@hot-loader/react-dom": "^16.14.0",
+    "@types/lodash": "^4.14.168",
+    "@types/pino": "^6.3.5",
+    "@types/qs": "^6.9.5",
+    "@types/react": "^16.14.4",
+    "@types/react-dom": "^16.9.11",
     "axios": "^0.21.1",
     "babel-loader": "^8.2.2",
     "cli-progress": "^3.9.0",
@@ -72,6 +70,7 @@
     "http-proxy-middleware": "^0.19.2",
     "js-object-pretty-print": "^0.3.0",
     "lodash": "^4.17.20",
+    "memory-fs": "^0.4.1",
     "node-eval": "^2.0.0",
     "open": "^6.4.0",
     "pino": "^6.11.1",
@@ -85,9 +84,11 @@
     "react-spring": "^8.0.27",
     "react-traverse": "^1.0.0",
     "register-module": "^0.0.2",
+    "rimraf": "^2.7.1",
     "rxjs": "^6.6.3",
     "typescript": "^4.1.5",
     "unzipper": "^0.10.11",
+    "use-force-update": "^1.0.7",
     "webpack": "^5.21.2",
     "webpack-cli": "^4.5.0",
     "webpack-dev-middleware": "^4.1.0",
