--- a/package.json
+++ b/package.json
@@ -62,13 +62,16 @@
     "colors": "^1.4.0",
     "commander": "^2.20.3",
     "compression-webpack-plugin": "^7.1.2",
+    "css-loader": "^5.2.6",
     "escodegen": "^1.14.3",
     "esprima": "^4.0.1",
     "estraverse": "^4.3.0",
     "express": "^4.17.1",
+    "file-loader": "^6.2.0",
     "fs-extra": "^7.0.1",
     "http-proxy-middleware": "^0.19.2",
     "js-object-pretty-print": "^0.3.0",
+    "less-loader": "^10.0.0",
     "lodash": "^4.17.20",
     "memory-fs": "^0.4.1",
     "node-eval": "^2.0.0",
@@ -86,6 +89,7 @@
     "register-module": "^0.0.2",
     "rimraf": "^2.7.1",
     "rxjs": "^6.6.3",
+    "style-loader": "^2.0.0",
     "typescript": "^4.1.5",
     "unzipper": "^0.10.11",
     "use-force-update": "^1.0.7",
