lock package version

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@pickjunk/min",
-  "version": "1.11.0",
+  "version": "1.11.1",
   "description": "A Tiny React Framework",
   "main": "lib/index.js",
   "scripts": {
@@ -35,70 +35,70 @@
   },
   "homepage": "https://github.com/pickjunk/min#readme",
   "devDependencies": {
-    "babel-jest": "^26.6.3",
-    "jest": "^26.6.3",
-    "puppeteer": "^1.20.0"
+    "babel-jest": "26.6.3",
+    "jest": "26.6.3",
+    "puppeteer": "1.20.0"
   },
   "dependencies": {
-    "@babel/cli": "^7.13.0",
-    "@babel/core": "^7.13.0",
-    "@babel/plugin-proposal-class-properties": "^7.13.0",
-    "@babel/plugin-proposal-object-rest-spread": "^7.13.0",
-    "@babel/plugin-transform-runtime": "^7.13.0",
-    "@babel/preset-env": "^7.13.0",
-    "@babel/preset-react": "^7.13.0",
-    "@babel/preset-typescript": "^7.13.0",
-    "@babel/register": "^7.13.0",
-    "@babel/runtime": "^7.13.0",
-    "@hot-loader/react-dom": "^16.14.0",
-    "@types/lodash": "^4.14.171",
-    "@types/pino": "^6.3.9",
-    "@types/qs": "^6.9.7",
-    "@types/react": "^16.14.11",
-    "@types/react-dom": "^16.9.14",
-    "axios": "^0.21.1",
-    "babel-loader": "^8.2.2",
-    "cli-progress": "^3.9.0",
-    "colors": "^1.4.0",
-    "commander": "^2.20.3",
-    "compression-webpack-plugin": "^7.1.2",
-    "css-loader": "^5.2.7",
-    "escodegen": "^1.14.3",
-    "esprima": "^4.0.1",
-    "estraverse": "^4.3.0",
-    "express": "^4.17.1",
-    "file-loader": "^6.2.0",
-    "fs-extra": "^7.0.1",
-    "http-proxy-middleware": "^0.19.2",
-    "js-object-pretty-print": "^0.3.0",
-    "less-loader": "^10.0.1",
-    "lodash": "^4.17.21",
-    "memory-fs": "^0.4.1",
-    "node-eval": "^2.0.0",
-    "open": "^6.4.0",
-    "pino": "^6.12.0",
-    "pino-pretty": "^4.8.0",
-    "portfinder": "^1.0.28",
-    "prettyjson": "^1.2.1",
-    "qs": "^6.10.1",
-    "react": "^16.14.0",
-    "react-dom": "^16.14.0",
-    "react-hot-loader": "^4.13.0",
-    "react-spring": "^9.2.4",
-    "react-traverse": "^1.0.0",
-    "register-module": "^0.0.2",
-    "rimraf": "^2.7.1",
-    "rxjs": "^6.6.7",
-    "style-loader": "^2.0.0",
-    "typescript": "^4.3.5",
-    "unzipper": "^0.10.11",
-    "use-force-update": "^1.0.7",
-    "webpack": "^5.45.0",
-    "webpack-cli": "^4.7.2",
-    "webpack-dev-middleware": "^4.3.0",
-    "webpack-hot-middleware": "^2.25.0",
-    "webpack-merge": "^5.8.0",
-    "webpackbar": "^5.0.0-3"
+    "@babel/cli": "7.13.0",
+    "@babel/core": "7.13.0",
+    "@babel/plugin-proposal-class-properties": "7.13.0",
+    "@babel/plugin-proposal-object-rest-spread": "7.13.0",
+    "@babel/plugin-transform-runtime": "7.13.0",
+    "@babel/preset-env": "7.13.0",
+    "@babel/preset-react": "7.13.0",
+    "@babel/preset-typescript": "7.13.0",
+    "@babel/register": "7.13.0",
+    "@babel/runtime": "7.13.0",
+    "@hot-loader/react-dom": "16.14.0",
+    "@types/lodash": "4.14.171",
+    "@types/pino": "6.3.9",
+    "@types/qs": "6.9.7",
+    "@types/react": "16.14.11",
+    "@types/react-dom": "16.9.14",
+    "axios": "0.21.1",
+    "babel-loader": "8.2.2",
+    "cli-progress": "3.9.0",
+    "colors": "1.4.0",
+    "commander": "2.20.3",
+    "compression-webpack-plugin": "7.1.2",
+    "css-loader": "5.2.7",
+    "escodegen": "1.14.3",
+    "esprima": "4.0.1",
+    "estraverse": "4.3.0",
+    "express": "4.17.1",
+    "file-loader": "6.2.0",
+    "fs-extra": "7.0.1",
+    "http-proxy-middleware": "0.19.2",
+    "js-object-pretty-print": "0.3.0",
+    "less-loader": "10.0.1",
+    "lodash": "4.17.21",
+    "memory-fs": "0.4.1",
+    "node-eval": "2.0.0",
+    "open": "6.4.0",
+    "pino": "6.12.0",
+    "pino-pretty": "4.8.0",
+    "portfinder": "1.0.28",
+    "prettyjson": "1.2.1",
+    "qs": "6.10.1",
+    "react": "16.14.0",
+    "react-dom": "16.14.0",
+    "react-hot-loader": "4.13.0",
+    "react-spring": "9.2.4",
+    "react-traverse": "1.0.0",
+    "register-module": "0.0.2",
+    "rimraf": "2.7.1",
+    "rxjs": "6.6.7",
+    "style-loader": "2.0.0",
+    "typescript": "4.3.5",
+    "unzipper": "0.10.11",
+    "use-force-update": "1.0.7",
+    "webpack": "5.45.0",
+    "webpack-cli": "4.7.2",
+    "webpack-dev-middleware": "4.3.0",
+    "webpack-hot-middleware": "2.25.0",
+    "webpack-merge": "5.8.0",
+    "webpackbar": "5.0.0-3"
   },
   "engines": {
     "node": ">=10.0.0",
